etapa3/y.output
Terminais sem uso na gramática

    TOKEN_ERROR


Estado 49 conflitos: 1 de deslocamento/redução
Estado 109 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: program $end

    1 program: decl

    2 decl: dec decl
    3     | %empty

    4 dec: type TK_IDENTIFIER '(' params ')' cmd
    5    | type TK_IDENTIFIER ':' arr_element ';'
    6    | type TK_IDENTIFIER ':' float ';'
    7    | type TK_IDENTIFIER '[' LIT_INTEGER ']' ';'
    8    | type TK_IDENTIFIER '[' LIT_INTEGER ']' ':' array_initialization ';'

    9 type: KW_CHAR
   10     | KW_INT
   11     | KW_FLOAT

   12 params: type TK_IDENTIFIER more_params
   13       | %empty

   14 more_params: ',' type TK_IDENTIFIER more_params
   15            | %empty

   16 block: '{' cmd_list '}'

   17 float: LIT_INTEGER '/' LIT_INTEGER

   18 expr: KW_READ
   19     | expr '+' expr
   20     | expr '-' expr
   21     | expr '*' expr
   22     | expr '/' expr
   23     | expr '>' expr
   24     | expr '<' expr
   25     | expr OPERATOR_EQ expr
   26     | expr OPERATOR_GE expr
   27     | expr OPERATOR_LE expr
   28     | expr OPERATOR_DIF expr
   29     | '(' expr ')'
   30     | LIT_INTEGER
   31     | LIT_CHAR
   32     | LIT_STRING
   33     | TK_IDENTIFIER
   34     | function_call

   35 function_call: TK_IDENTIFIER '(' call_parameters ')'

   36 call_parameters: TK_IDENTIFIER more_call_params
   37                | LIT_CHAR more_call_params
   38                | LIT_INTEGER more_call_params
   39                | %empty

   40 more_call_params: ',' call_parameters
   41                 | %empty

   42 print_values: LIT_STRING more_print_values
   43             | TK_IDENTIFIER more_print_values
   44             | TK_IDENTIFIER '[' array_index ']'
   45             | %empty

   46 array_index: LIT_INTEGER

   47 more_print_values: ',' print_values
   48                  | %empty

   49 cmd_list: cmd ';' cmd_list
   50         | TK_IDENTIFIER ':' cmd_list
   51         | %empty

   52 cmd: TK_IDENTIFIER '=' expr
   53    | TK_IDENTIFIER '[' expr ']' '=' expr
   54    | KW_PRINT print_values
   55    | KW_RETURN expr
   56    | KW_IF expr KW_THEN cmd
   57    | KW_IF expr KW_THEN cmd KW_ELSE cmd
   58    | KW_WHILE expr cmd
   59    | KW_GOTO TK_IDENTIFIER
   60    | block
   61    | expr
   62    | %empty

   63 array_initialization: arr_elements
   64                     | %empty

   65 arr_elements: arr_element more_elements

   66 more_elements: arr_elements
   67              | %empty

   68 arr_element: LIT_INTEGER
   69            | LIT_CHAR


Terminais, com as regras onde eles aparecem

    $end (0) 0
    '(' (40) 4 29 35
    ')' (41) 4 29 35
    '*' (42) 21
    '+' (43) 19
    ',' (44) 14 40 47
    '-' (45) 20
    '/' (47) 17 22
    ':' (58) 5 6 8 50
    ';' (59) 5 6 7 8 49
    '<' (60) 24
    '=' (61) 52 53
    '>' (62) 23
    '[' (91) 7 8 44 53
    ']' (93) 7 8 44 53
    '{' (123) 16
    '}' (125) 16
    error (256)
    KW_CHAR (258) 9
    KW_INT (259) 10
    KW_FLOAT (260) 11
    KW_IF (261) 56 57
    KW_THEN (262) 56 57
    KW_ELSE (263) 57
    KW_WHILE (264) 58
    KW_GOTO (265) 59
    KW_READ (266) 18
    KW_PRINT (267) 54
    KW_RETURN (268) 55
    OPERATOR_LE (269) 27
    OPERATOR_GE (270) 26
    OPERATOR_EQ (271) 25
    OPERATOR_DIF (272) 28
    TK_IDENTIFIER <symbol> (273) 4 5 6 7 8 12 14 33 35 36 43 44 50 52 53 59
    LIT_INTEGER <symbol> (274) 7 8 17 30 38 46 68
    LIT_CHAR <symbol> (275) 31 37 69
    LIT_STRING <symbol> (276) 32 42
    TOKEN_ERROR (277)


Não terminais com as regras onde eles aparecem

    $accept (39)
        à esquerda: 0
    program <ast> (40)
        à esquerda: 1
        à direita: 0
    decl <ast> (41)
        à esquerda: 2 3
        à direita: 1 2
    dec <ast> (42)
        à esquerda: 4 5 6 7 8
        à direita: 2
    type <ast> (43)
        à esquerda: 9 10 11
        à direita: 4 5 6 7 8 12 14
    params <ast> (44)
        à esquerda: 12 13
        à direita: 4
    more_params <ast> (45)
        à esquerda: 14 15
        à direita: 12 14
    block <ast> (46)
        à esquerda: 16
        à direita: 60
    float <ast> (47)
        à esquerda: 17
        à direita: 6
    expr <ast> (48)
        à esquerda: 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34
        à direita: 19 20 21 22 23 24 25 26 27 28 29 52 53 55 56 57 58 61
    function_call <ast> (49)
        à esquerda: 35
        à direita: 34
    call_parameters (50)
        à esquerda: 36 37 38 39
        à direita: 35 40
    more_call_params (51)
        à esquerda: 40 41
        à direita: 36 37 38
    print_values <ast> (52)
        à esquerda: 42 43 44 45
        à direita: 47 54
    array_index <ast> (53)
        à esquerda: 46
        à direita: 44
    more_print_values <ast> (54)
        à esquerda: 47 48
        à direita: 42 43
    cmd_list <ast> (55)
        à esquerda: 49 50 51
        à direita: 16 49 50
    cmd <ast> (56)
        à esquerda: 52 53 54 55 56 57 58 59 60 61 62
        à direita: 4 49 56 57 58
    array_initialization <ast> (57)
        à esquerda: 63 64
        à direita: 8
    arr_elements <ast> (58)
        à esquerda: 65
        à direita: 63 66
    more_elements <ast> (59)
        à esquerda: 66 67
        à direita: 65
    arr_element <ast> (60)
        à esquerda: 68 69
        à direita: 5 65


Estado 0

    0 $accept: . program $end

    KW_CHAR   deslocar, e ir ao estado 1
    KW_INT    deslocar, e ir ao estado 2
    KW_FLOAT  deslocar, e ir ao estado 3

    $padrão  reduzir usando a regra 3 (decl)

    program  ir ao estado 4
    decl     ir ao estado 5
    dec      ir ao estado 6
    type     ir ao estado 7


Estado 1

    9 type: KW_CHAR .

    $padrão  reduzir usando a regra 9 (type)


Estado 2

   10 type: KW_INT .

    $padrão  reduzir usando a regra 10 (type)


Estado 3

   11 type: KW_FLOAT .

    $padrão  reduzir usando a regra 11 (type)


Estado 4

    0 $accept: program . $end

    $end  deslocar, e ir ao estado 8


Estado 5

    1 program: decl .

    $padrão  reduzir usando a regra 1 (program)


Estado 6

    2 decl: dec . decl

    KW_CHAR   deslocar, e ir ao estado 1
    KW_INT    deslocar, e ir ao estado 2
    KW_FLOAT  deslocar, e ir ao estado 3

    $padrão  reduzir usando a regra 3 (decl)

    decl  ir ao estado 9
    dec   ir ao estado 6
    type  ir ao estado 7


Estado 7

    4 dec: type . TK_IDENTIFIER '(' params ')' cmd
    5    | type . TK_IDENTIFIER ':' arr_element ';'
    6    | type . TK_IDENTIFIER ':' float ';'
    7    | type . TK_IDENTIFIER '[' LIT_INTEGER ']' ';'
    8    | type . TK_IDENTIFIER '[' LIT_INTEGER ']' ':' array_initialization ';'

    TK_IDENTIFIER  deslocar, e ir ao estado 10


Estado 8

    0 $accept: program $end .

    $padrão  aceitar


Estado 9

    2 decl: dec decl .

    $padrão  reduzir usando a regra 2 (decl)


Estado 10

    4 dec: type TK_IDENTIFIER . '(' params ')' cmd
    5    | type TK_IDENTIFIER . ':' arr_element ';'
    6    | type TK_IDENTIFIER . ':' float ';'
    7    | type TK_IDENTIFIER . '[' LIT_INTEGER ']' ';'
    8    | type TK_IDENTIFIER . '[' LIT_INTEGER ']' ':' array_initialization ';'

    '('  deslocar, e ir ao estado 11
    ':'  deslocar, e ir ao estado 12
    '['  deslocar, e ir ao estado 13


Estado 11

    4 dec: type TK_IDENTIFIER '(' . params ')' cmd

    KW_CHAR   deslocar, e ir ao estado 1
    KW_INT    deslocar, e ir ao estado 2
    KW_FLOAT  deslocar, e ir ao estado 3

    $padrão  reduzir usando a regra 13 (params)

    type    ir ao estado 14
    params  ir ao estado 15


Estado 12

    5 dec: type TK_IDENTIFIER ':' . arr_element ';'
    6    | type TK_IDENTIFIER ':' . float ';'

    LIT_INTEGER  deslocar, e ir ao estado 16
    LIT_CHAR     deslocar, e ir ao estado 17

    float        ir ao estado 18
    arr_element  ir ao estado 19


Estado 13

    7 dec: type TK_IDENTIFIER '[' . LIT_INTEGER ']' ';'
    8    | type TK_IDENTIFIER '[' . LIT_INTEGER ']' ':' array_initialization ';'

    LIT_INTEGER  deslocar, e ir ao estado 20


Estado 14

   12 params: type . TK_IDENTIFIER more_params

    TK_IDENTIFIER  deslocar, e ir ao estado 21


Estado 15

    4 dec: type TK_IDENTIFIER '(' params . ')' cmd

    ')'  deslocar, e ir ao estado 22


Estado 16

   17 float: LIT_INTEGER . '/' LIT_INTEGER
   68 arr_element: LIT_INTEGER .

    '/'  deslocar, e ir ao estado 23

    $padrão  reduzir usando a regra 68 (arr_element)


Estado 17

   69 arr_element: LIT_CHAR .

    $padrão  reduzir usando a regra 69 (arr_element)


Estado 18

    6 dec: type TK_IDENTIFIER ':' float . ';'

    ';'  deslocar, e ir ao estado 24


Estado 19

    5 dec: type TK_IDENTIFIER ':' arr_element . ';'

    ';'  deslocar, e ir ao estado 25


Estado 20

    7 dec: type TK_IDENTIFIER '[' LIT_INTEGER . ']' ';'
    8    | type TK_IDENTIFIER '[' LIT_INTEGER . ']' ':' array_initialization ';'

    ']'  deslocar, e ir ao estado 26


Estado 21

   12 params: type TK_IDENTIFIER . more_params

    ','  deslocar, e ir ao estado 27

    $padrão  reduzir usando a regra 15 (more_params)

    more_params  ir ao estado 28


Estado 22

    4 dec: type TK_IDENTIFIER '(' params ')' . cmd

    KW_IF          deslocar, e ir ao estado 29
    KW_WHILE       deslocar, e ir ao estado 30
    KW_GOTO        deslocar, e ir ao estado 31
    KW_READ        deslocar, e ir ao estado 32
    KW_PRINT       deslocar, e ir ao estado 33
    KW_RETURN      deslocar, e ir ao estado 34
    TK_IDENTIFIER  deslocar, e ir ao estado 35
    LIT_INTEGER    deslocar, e ir ao estado 36
    LIT_CHAR       deslocar, e ir ao estado 37
    LIT_STRING     deslocar, e ir ao estado 38
    '('            deslocar, e ir ao estado 39
    '{'            deslocar, e ir ao estado 40

    $padrão  reduzir usando a regra 62 (cmd)

    block          ir ao estado 41
    expr           ir ao estado 42
    function_call  ir ao estado 43
    cmd            ir ao estado 44


Estado 23

   17 float: LIT_INTEGER '/' . LIT_INTEGER

    LIT_INTEGER  deslocar, e ir ao estado 45


Estado 24

    6 dec: type TK_IDENTIFIER ':' float ';' .

    $padrão  reduzir usando a regra 6 (dec)


Estado 25

    5 dec: type TK_IDENTIFIER ':' arr_element ';' .

    $padrão  reduzir usando a regra 5 (dec)


Estado 26

    7 dec: type TK_IDENTIFIER '[' LIT_INTEGER ']' . ';'
    8    | type TK_IDENTIFIER '[' LIT_INTEGER ']' . ':' array_initialization ';'

    ':'  deslocar, e ir ao estado 46
    ';'  deslocar, e ir ao estado 47


Estado 27

   14 more_params: ',' . type TK_IDENTIFIER more_params

    KW_CHAR   deslocar, e ir ao estado 1
    KW_INT    deslocar, e ir ao estado 2
    KW_FLOAT  deslocar, e ir ao estado 3

    type  ir ao estado 48


Estado 28

   12 params: type TK_IDENTIFIER more_params .

    $padrão  reduzir usando a regra 12 (params)


Estado 29

   56 cmd: KW_IF . expr KW_THEN cmd
   57    | KW_IF . expr KW_THEN cmd KW_ELSE cmd

    KW_READ        deslocar, e ir ao estado 32
    TK_IDENTIFIER  deslocar, e ir ao estado 49
    LIT_INTEGER    deslocar, e ir ao estado 36
    LIT_CHAR       deslocar, e ir ao estado 37
    LIT_STRING     deslocar, e ir ao estado 38
    '('            deslocar, e ir ao estado 39

    expr           ir ao estado 50
    function_call  ir ao estado 43


Estado 30

   58 cmd: KW_WHILE . expr cmd

    KW_READ        deslocar, e ir ao estado 32
    TK_IDENTIFIER  deslocar, e ir ao estado 49
    LIT_INTEGER    deslocar, e ir ao estado 36
    LIT_CHAR       deslocar, e ir ao estado 37
    LIT_STRING     deslocar, e ir ao estado 38
    '('            deslocar, e ir ao estado 39

    expr           ir ao estado 51
    function_call  ir ao estado 43


Estado 31

   59 cmd: KW_GOTO . TK_IDENTIFIER

    TK_IDENTIFIER  deslocar, e ir ao estado 52


Estado 32

   18 expr: KW_READ .

    $padrão  reduzir usando a regra 18 (expr)


Estado 33

   54 cmd: KW_PRINT . print_values

    TK_IDENTIFIER  deslocar, e ir ao estado 53
    LIT_STRING     deslocar, e ir ao estado 54

    $padrão  reduzir usando a regra 45 (print_values)

    print_values  ir ao estado 55


Estado 34

   55 cmd: KW_RETURN . expr

    KW_READ        deslocar, e ir ao estado 32
    TK_IDENTIFIER  deslocar, e ir ao estado 49
    LIT_INTEGER    deslocar, e ir ao estado 36
    LIT_CHAR       deslocar, e ir ao estado 37
    LIT_STRING     deslocar, e ir ao estado 38
    '('            deslocar, e ir ao estado 39

    expr           ir ao estado 56
    function_call  ir ao estado 43


Estado 35

   33 expr: TK_IDENTIFIER .
   35 function_call: TK_IDENTIFIER . '(' call_parameters ')'
   52 cmd: TK_IDENTIFIER . '=' expr
   53    | TK_IDENTIFIER . '[' expr ']' '=' expr

    '('  deslocar, e ir ao estado 57
    '['  deslocar, e ir ao estado 58
    '='  deslocar, e ir ao estado 59

    $padrão  reduzir usando a regra 33 (expr)


Estado 36

   30 expr: LIT_INTEGER .

    $padrão  reduzir usando a regra 30 (expr)


Estado 37

   31 expr: LIT_CHAR .

    $padrão  reduzir usando a regra 31 (expr)


Estado 38

   32 expr: LIT_STRING .

    $padrão  reduzir usando a regra 32 (expr)


Estado 39

   29 expr: '(' . expr ')'

    KW_READ        deslocar, e ir ao estado 32
    TK_IDENTIFIER  deslocar, e ir ao estado 49
    LIT_INTEGER    deslocar, e ir ao estado 36
    LIT_CHAR       deslocar, e ir ao estado 37
    LIT_STRING     deslocar, e ir ao estado 38
    '('            deslocar, e ir ao estado 39

    expr           ir ao estado 60
    function_call  ir ao estado 43


Estado 40

   16 block: '{' . cmd_list '}'

    KW_IF          deslocar, e ir ao estado 29
    KW_WHILE       deslocar, e ir ao estado 30
    KW_GOTO        deslocar, e ir ao estado 31
    KW_READ        deslocar, e ir ao estado 32
    KW_PRINT       deslocar, e ir ao estado 33
    KW_RETURN      deslocar, e ir ao estado 34
    TK_IDENTIFIER  deslocar, e ir ao estado 61
    LIT_INTEGER    deslocar, e ir ao estado 36
    LIT_CHAR       deslocar, e ir ao estado 37
    LIT_STRING     deslocar, e ir ao estado 38
    '('            deslocar, e ir ao estado 39
    '{'            deslocar, e ir ao estado 40

    ';'       reduzir usando a regra 62 (cmd)
    $padrão  reduzir usando a regra 51 (cmd_list)

    block          ir ao estado 41
    expr           ir ao estado 42
    function_call  ir ao estado 43
    cmd_list       ir ao estado 62
    cmd            ir ao estado 63


Estado 41

   60 cmd: block .

    $padrão  reduzir usando a regra 60 (cmd)


Estado 42

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '>' expr
   24     | expr . '<' expr
   25     | expr . OPERATOR_EQ expr
   26     | expr . OPERATOR_GE expr
   27     | expr . OPERATOR_LE expr
   28     | expr . OPERATOR_DIF expr
   61 cmd: expr .

    OPERATOR_LE   deslocar, e ir ao estado 64
    OPERATOR_GE   deslocar, e ir ao estado 65
    OPERATOR_EQ   deslocar, e ir ao estado 66
    OPERATOR_DIF  deslocar, e ir ao estado 67
    '<'           deslocar, e ir ao estado 68
    '>'           deslocar, e ir ao estado 69
    '+'           deslocar, e ir ao estado 70
    '-'           deslocar, e ir ao estado 71
    '*'           deslocar, e ir ao estado 72
    '/'           deslocar, e ir ao estado 73

    $padrão  reduzir usando a regra 61 (cmd)


Estado 43

   34 expr: function_call .

    $padrão  reduzir usando a regra 34 (expr)


Estado 44

    4 dec: type TK_IDENTIFIER '(' params ')' cmd .

    $padrão  reduzir usando a regra 4 (dec)


Estado 45

   17 float: LIT_INTEGER '/' LIT_INTEGER .

    $padrão  reduzir usando a regra 17 (float)


Estado 46

    8 dec: type TK_IDENTIFIER '[' LIT_INTEGER ']' ':' . array_initialization ';'

    LIT_INTEGER  deslocar, e ir ao estado 74
    LIT_CHAR     deslocar, e ir ao estado 17

    $padrão  reduzir usando a regra 64 (array_initialization)

    array_initialization  ir ao estado 75
    arr_elements          ir ao estado 76
    arr_element           ir ao estado 77


Estado 47

    7 dec: type TK_IDENTIFIER '[' LIT_INTEGER ']' ';' .

    $padrão  reduzir usando a regra 7 (dec)


Estado 48

   14 more_params: ',' type . TK_IDENTIFIER more_params

    TK_IDENTIFIER  deslocar, e ir ao estado 78


Estado 49

   33 expr: TK_IDENTIFIER .
   35 function_call: TK_IDENTIFIER . '(' call_parameters ')'

    '('  deslocar, e ir ao estado 57

    '('       [reduzir usando a regra 33 (expr)]
    $padrão  reduzir usando a regra 33 (expr)


Estado 50

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '>' expr
   24     | expr . '<' expr
   25     | expr . OPERATOR_EQ expr
   26     | expr . OPERATOR_GE expr
   27     | expr . OPERATOR_LE expr
   28     | expr . OPERATOR_DIF expr
   56 cmd: KW_IF expr . KW_THEN cmd
   57    | KW_IF expr . KW_THEN cmd KW_ELSE cmd

    KW_THEN       deslocar, e ir ao estado 79
    OPERATOR_LE   deslocar, e ir ao estado 64
    OPERATOR_GE   deslocar, e ir ao estado 65
    OPERATOR_EQ   deslocar, e ir ao estado 66
    OPERATOR_DIF  deslocar, e ir ao estado 67
    '<'           deslocar, e ir ao estado 68
    '>'           deslocar, e ir ao estado 69
    '+'           deslocar, e ir ao estado 70
    '-'           deslocar, e ir ao estado 71
    '*'           deslocar, e ir ao estado 72
    '/'           deslocar, e ir ao estado 73


Estado 51

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '>' expr
   24     | expr . '<' expr
   25     | expr . OPERATOR_EQ expr
   26     | expr . OPERATOR_GE expr
   27     | expr . OPERATOR_LE expr
   28     | expr . OPERATOR_DIF expr
   58 cmd: KW_WHILE expr . cmd

    KW_IF          deslocar, e ir ao estado 29
    KW_WHILE       deslocar, e ir ao estado 30
    KW_GOTO        deslocar, e ir ao estado 31
    KW_READ        deslocar, e ir ao estado 32
    KW_PRINT       deslocar, e ir ao estado 33
    KW_RETURN      deslocar, e ir ao estado 34
    OPERATOR_LE    deslocar, e ir ao estado 64
    OPERATOR_GE    deslocar, e ir ao estado 65
    OPERATOR_EQ    deslocar, e ir ao estado 66
    OPERATOR_DIF   deslocar, e ir ao estado 67
    TK_IDENTIFIER  deslocar, e ir ao estado 35
    LIT_INTEGER    deslocar, e ir ao estado 36
    LIT_CHAR       deslocar, e ir ao estado 37
    LIT_STRING     deslocar, e ir ao estado 38
    '<'            deslocar, e ir ao estado 68
    '>'            deslocar, e ir ao estado 69
    '+'            deslocar, e ir ao estado 70
    '-'            deslocar, e ir ao estado 71
    '*'            deslocar, e ir ao estado 72
    '/'            deslocar, e ir ao estado 73
    '('            deslocar, e ir ao estado 39
    '{'            deslocar, e ir ao estado 40

    $padrão  reduzir usando a regra 62 (cmd)

    block          ir ao estado 41
    expr           ir ao estado 42
    function_call  ir ao estado 43
    cmd            ir ao estado 80


Estado 52

   59 cmd: KW_GOTO TK_IDENTIFIER .

    $padrão  reduzir usando a regra 59 (cmd)


Estado 53

   43 print_values: TK_IDENTIFIER . more_print_values
   44             | TK_IDENTIFIER . '[' array_index ']'

    '['  deslocar, e ir ao estado 81
    ','  deslocar, e ir ao estado 82

    $padrão  reduzir usando a regra 48 (more_print_values)

    more_print_values  ir ao estado 83


Estado 54

   42 print_values: LIT_STRING . more_print_values

    ','  deslocar, e ir ao estado 82

    $padrão  reduzir usando a regra 48 (more_print_values)

    more_print_values  ir ao estado 84


Estado 55

   54 cmd: KW_PRINT print_values .

    $padrão  reduzir usando a regra 54 (cmd)


Estado 56

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '>' expr
   24     | expr . '<' expr
   25     | expr . OPERATOR_EQ expr
   26     | expr . OPERATOR_GE expr
   27     | expr . OPERATOR_LE expr
   28     | expr . OPERATOR_DIF expr
   55 cmd: KW_RETURN expr .

    OPERATOR_LE   deslocar, e ir ao estado 64
    OPERATOR_GE   deslocar, e ir ao estado 65
    OPERATOR_EQ   deslocar, e ir ao estado 66
    OPERATOR_DIF  deslocar, e ir ao estado 67
    '<'           deslocar, e ir ao estado 68
    '>'           deslocar, e ir ao estado 69
    '+'           deslocar, e ir ao estado 70
    '-'           deslocar, e ir ao estado 71
    '*'           deslocar, e ir ao estado 72
    '/'           deslocar, e ir ao estado 73

    $padrão  reduzir usando a regra 55 (cmd)


Estado 57

   35 function_call: TK_IDENTIFIER '(' . call_parameters ')'

    TK_IDENTIFIER  deslocar, e ir ao estado 85
    LIT_INTEGER    deslocar, e ir ao estado 86
    LIT_CHAR       deslocar, e ir ao estado 87

    $padrão  reduzir usando a regra 39 (call_parameters)

    call_parameters  ir ao estado 88


Estado 58

   53 cmd: TK_IDENTIFIER '[' . expr ']' '=' expr

    KW_READ        deslocar, e ir ao estado 32
    TK_IDENTIFIER  deslocar, e ir ao estado 49
    LIT_INTEGER    deslocar, e ir ao estado 36
    LIT_CHAR       deslocar, e ir ao estado 37
    LIT_STRING     deslocar, e ir ao estado 38
    '('            deslocar, e ir ao estado 39

    expr           ir ao estado 89
    function_call  ir ao estado 43


Estado 59

   52 cmd: TK_IDENTIFIER '=' . expr

    KW_READ        deslocar, e ir ao estado 32
    TK_IDENTIFIER  deslocar, e ir ao estado 49
    LIT_INTEGER    deslocar, e ir ao estado 36
    LIT_CHAR       deslocar, e ir ao estado 37
    LIT_STRING     deslocar, e ir ao estado 38
    '('            deslocar, e ir ao estado 39

    expr           ir ao estado 90
    function_call  ir ao estado 43


Estado 60

   19 expr: expr . '+' expr
   20     | expr . '-' expr
   21     | expr . '*' expr
   22     | expr . '/' expr
   23     | expr . '>' expr
   24     | expr . '<' expr
   25     | expr . OPERATOR_EQ expr
   26     | expr . OPERATOR_GE expr
   27     | expr . OPERATOR_LE expr
   28     | expr . OPERATOR_DIF expr
   29     | '(' expr . ')'

    OPERATOR_LE   deslocar, e ir ao estado 64
    OPERATOR_GE   deslocar, e ir ao estado 65
    OPERATOR_EQ   deslocar, e ir ao estado 66
    OPERATOR_DIF  deslocar, e ir ao estado 67
    '<'           deslocar, e ir ao estado 68
    '>'           deslocar, e ir ao estado 69
    '+'           deslocar, e ir ao estado 70
    '-'           deslocar, e ir ao estado 71
    '*'           deslocar, e ir ao estado 72
    '/'           deslocar, e ir ao estado 73
    ')'           deslocar, e ir ao estado 91


Estado 61
